--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev,visualize]"
+      - name: Check space
+        run: du -sh
       - name: Run tests
         run: pytest
       - name: build
