--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: gpaulo-ord-0
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -22,8 +22,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev,visualize]"
-      - name: Check space
-        run: du -sh /*
       - name: Run tests
         run: pytest -s
       - name: build
